[project]
name = "qwc-elevation-service"
version = "v2025.10.13"
description = "QWC Elevation Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.0",
    "Werkzeug~=3.1.0",
    "Flask-JWT-Extended~=4.7.0",
    "qwc-services-core~=1.5.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1"
]
